[project]
name = "LinkedIn_Agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "gradio>=5.49.1",
    "mailtrap>=2.3.0",
    "openai>=1.105.0",
    "openai-agents>=0.4.2",
    "pdfreader>=0.1.15",
    "pypdf>=6.0.0",
]
